conclusione della struttura con bootstrap

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Bootstrap Freelancer</title>
     </head>
     <body>
+        <!-- creazione header -->
         <header>
             <div class="container text-light p-4">
                 <div class="row justify-content-between">
@@ -34,13 +35,124 @@
                 </div>
               </div>
         </header>
-        <div class="contenitore-azzurro">
-            <div class="container text-light d-flex justify-content-center">
+        <!-- creazione jumbo -->
+        <div class="contenitore-azzurro text-center">
+            <div class="container text-light d-flex justify-content-center p-4">
                 <div class="row flex-column">
                     <div class="col">Immagine</div>
                     <div class="col">START BOOTSTRAP</div>
                     <div class="col">riga con stella</div>
                     <div class="col"> Graphic artist- web designer- illustrator</div>
+                </div>
+            </div>
+        </div>
+        <!-- creazione contenitore con immagini -->
+        <div class="container text-center p-4">
+            <div class="row flex-column">
+                <div class="col-12">PORTFOLIO</div>
+                <div class="col-12">riga con stella</div>
+            </div>
+            <div class="row gy-3">
+                <div class="col-4">
+                    <div class="contenitore-immagine">
+                        <img src="./img/cabin.png" alt="casa">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="contenitore-immagine">
+                        <img src="./img/cake.png" alt="torta">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="contenitore-immagine">
+                        <img src="./img/circus.png" alt="circo">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="contenitore-immagine">
+                        <img src="./img/game.png" alt="game">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="contenitore-immagine">
+                        <img src="./img/safe.png" alt="cassaforte">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="contenitore-immagine">
+                        <img src="./img/submarine.png" alt="sottomarino">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- creazione sezione about -->
+        <div class="contenitore-azzurro">
+            <div class="container text-center p-4">
+                <div class="row flex-column">
+                    <div class="col">ABOUT</div>
+                    <div class="col">riga con stella</div>
+                    <div class="col">
+                        <div class="row flex-row text-start">
+                            <div class="col-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aut quo nesciunt molestias ea eligendi soluta, incidunt, adipisci ipsam error, quaerat id commodi ratione dolorum numquam distinctio officia in! Facere.</div>
+                            <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione corporis deserunt quia fugit quod, sed, similique iste minima debitis facere laborum cum quos deleniti dolore vero. Eos dolores nostrum iusto!</div>
+                        </div>
+                    </div>
+                    <div class="col">Download</div>
+                </div>
+            </div>
+        </div>
+        <!-- creazione sezione contact -->
+        <div class="container p-4">
+            <div class="row flex-column text-center">
+                <div class="col">CONTACT ME</div>
+                <div class="col">riga con stella</div>
+            </div>
+            <div class="row flex-column">
+                <div class="col">
+                    <div class="row flex-column">
+                        <div class="col">
+                            Name <hr>
+                        </div>
+                        <div class="col">
+                            Email Address <hr>
+                        </div>
+                        <div class="col">
+                            Phone Number <hr>
+                        </div>
+                        <div class="col">
+                            Message
+                        </div>
+                    </div>
+                </div>
+                <div class="col gy-5">
+                    <hr>
+                    Send
+                </div>
+            </div>
+        </div>
+        <!-- creazione footer -->
+        <div class="contenitore-blu-chiaro">
+            <div class="container p-4 text-light text-center">
+                <div class="row justify-content-between">
+                    <div class="col">
+                        LOCATION
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit reiciendis nemo maxime expedita laborum placeat vel, obcaecati voluptatem corporis, deleniti at harum recusandae! Nostrum incidunt ex culpa consectetur iste.</P>
+                    </div>
+                    <div class="col">
+                        AROUND THE WEB 
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis cumque necessitatibus repellendus, quae vitae illo quo vel amet minus quisquam iusto corporis dolore libero, praesentium fuga asperiores, tempora perspiciatis iure!</p>
+                    </div>
+                    <div class="col">
+                        ABOUT FREELANCER 
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione fuga eaque odit ad inventore. Harum consectetur quod sint saepe, dolor quae laudantium, nam ex ipsum unde voluptas? Impedit, modi est.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contenitore-blu-scuro">
+            <div class="container text-center text-light p-4">
+                <div class="row">
+                    <div class="col">Copyright C Your Website 2019</div>
                 </div>
             </div>
         </div>
