--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                   </div>
                   <div class="col">
                     <div class="row justify-content-end">
-                        <div class="col-3 text-center">
+                        <div class="col-lg-3 text-center">
                             <div>PORTFOLIO</div>
                         </div>
-                        <div class="col-3 text-center">
+                        <div class="col-lg-3 text-center">
                             <div>ABOUT</div>
                         </div>
-                        <div class="col-3 text-center">
+                        <div class="col-lg-3 text-center">
                             <div>CONTACT</div>
                         </div>
                       </div>
@@ -53,32 +53,32 @@
                 <div class="col-12">riga con stella</div>
             </div>
             <div class="row gy-3">
-                <div class="col-4">
+                <div class="col-12 col-lg-4">
                     <div class="contenitore-immagine">
                         <img src="./img/cabin.png" alt="casa">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-lg-4">
                     <div class="contenitore-immagine">
                         <img src="./img/cake.png" alt="torta">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-lg-4">
                     <div class="contenitore-immagine">
                         <img src="./img/circus.png" alt="circo">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-lg-4">
                     <div class="contenitore-immagine">
                         <img src="./img/game.png" alt="game">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-lg-4">
                     <div class="contenitore-immagine">
                         <img src="./img/safe.png" alt="cassaforte">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-lg-4">
                     <div class="contenitore-immagine">
                         <img src="./img/submarine.png" alt="sottomarino">
                     </div>
@@ -93,8 +93,8 @@
                     <div class="col">riga con stella</div>
                     <div class="col">
                         <div class="row flex-row text-start">
-                            <div class="col-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aut quo nesciunt molestias ea eligendi soluta, incidunt, adipisci ipsam error, quaerat id commodi ratione dolorum numquam distinctio officia in! Facere.</div>
-                            <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione corporis deserunt quia fugit quod, sed, similique iste minima debitis facere laborum cum quos deleniti dolore vero. Eos dolores nostrum iusto!</div>
+                            <div class="col-12 col-lg-6 py-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aut quo nesciunt molestias ea eligendi soluta, incidunt, adipisci ipsam error, quaerat id commodi ratione dolorum numquam distinctio officia in! Facere.</div>
+                            <div class="col-12 col-lg-6 py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione corporis deserunt quia fugit quod, sed, similique iste minima debitis facere laborum cum quos deleniti dolore vero. Eos dolores nostrum iusto!</div>
                         </div>
                     </div>
                     <div class="col">Download</div>
@@ -134,15 +134,15 @@
         <div class="contenitore-blu-chiaro">
             <div class="container p-4 text-light text-center">
                 <div class="row justify-content-between">
-                    <div class="col">
+                    <div class="col-12 col-lg-4">
                         LOCATION
                         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit reiciendis nemo maxime expedita laborum placeat vel, obcaecati voluptatem corporis, deleniti at harum recusandae! Nostrum incidunt ex culpa consectetur iste.</P>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-lg-4">
                         AROUND THE WEB 
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis cumque necessitatibus repellendus, quae vitae illo quo vel amet minus quisquam iusto corporis dolore libero, praesentium fuga asperiores, tempora perspiciatis iure!</p>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-lg-4">
                         ABOUT FREELANCER 
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione fuga eaque odit ad inventore. Harum consectetur quod sint saepe, dolor quae laudantium, nam ex ipsum unde voluptas? Impedit, modi est.</p>
                     </div>
