sistemazione dropdown navbar

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse d-flex navbar-collapse justify-content-end " id="navbarSupportedContent">
-                    <ul class="navbar-nav me-3 mb-2 mb-lg-0 ">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#">ABOUT</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            CONTACT
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#primo">Portfolio</a></li>
-                          <li><a class="dropdown-item" href="#secondo">Contacts</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#terzo">Copyright</a></li>
-                        </ul>
-                      </li>
+                  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-3 mb-2 mb-lg-0 align-items-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            ABOUT
+                            </a>
+                            <ul class="dropdown-menu"       aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#primo">Portfolio</a></li>
+                                <li><a class="dropdown-item" href="#secondo">Contacts</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#terzo">Copyright</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">CONTACT</a>
+                         </li>
                     </ul>
                   </div>
                 </div>
